# primitiv

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  config.h.in
primitiv/: CMakeLists.txt  arithmetic.h  basic_functions.h  compiler.cc  compiler.h  composite_functions.h  config.h.in  constant_initializer.cc  constant_initializer.h  cpu_device.cc  cpu_device.h  cuda16_device.cu  cuda16_device.h  cuda_device.cu  cuda_device.h  cuda_memory_pool.cu  cuda_memory_pool.h  cuda_utils.cu  cuda_utils.h  default_scope.h  device.cc  device.h  dynamic_library.cc  dynamic_library.h  eigen_device.cc  eigen_device.h  error.h  file_format.h  function.h  function_impl.cc  function_impl.h  functions.h  graph.cc  graph.h  initializer.h  initializer_impl.cc  initializer_impl.h  memory_pool.cc  memory_pool.h  messages.proto  (+53 more)
primitiv/c/: api.h  api_cuda.h  api_opencl.h  cuda_device.cc  cuda_device.h  define.h  device.cc  device.h  eigen_device.cc  eigen_device.h  functions.cc  functions.h  graph.cc  graph.h  initializer.cc  initializer.h  initializer_impl.cc  initializer_impl.h  internal.cc  internal.h  model.cc  model.h  naive_device.cc  naive_device.h  opencl_device.cc  opencl_device.h  optimizer.cc  optimizer.h  optimizer_impl.cc  optimizer_impl.h  parameter.cc  parameter.h  shape.cc  shape.h  status.cc  status.h  tensor.cc  tensor.h  utils.cc  utils.h
primitiv/c/devices/: CMakeLists.txt
primitiv/c/internal/: internal.cc  internal.h
primitiv/contrib/: functions.h
primitiv/core/: arithmetic.h  basic_functions.h  cuda16_device.cu  cuda16_device.h  cuda_device.cu  cuda_device.h  data_type.h  device.cc  device.h  eigen_device.h  error.h  file_format.h  functions.h  graph.cc  graph.h  initializer.h  initializer_impl.cc  initializer_impl.h  memory_pool.cc  memory_pool.h  mixins.h  model.cc  model.h  naive_device.h  node_funcs.cc  numeric_utils.h  opencl_device.cc  opencl_device.h  operator.h  operator_impl.cc  operator_impl.h  optimizer.cc  optimizer.h  optimizer_impl.cc  optimizer_impl.h  parameter.cc  parameter.h  random.h  shape.cc  shape.h  (+8 more)
primitiv/core/mixins/: default_settable.h  identifiable.h  noncopyable.h  nonmovable.h
primitiv/device_ops/: add_cuda.cu  add_eigen.cc  add_naive.cc  argmax_cuda.cu  argmax_eigen.cc  argmax_naive.cc  argmin_cuda.cu  argmin_eigen.cc  argmin_naive.cc  batch_sum_cuda.cu  batch_sum_eigen.cc  batch_sum_naive.cc  broadcast_cuda.cu  broadcast_eigen.cc  broadcast_naive.cc  concat_cuda.cu  concat_eigen.cc  concat_naive.cc  conv2d_cuda.cu  conv2d_eigen.cc  conv2d_naive.cc  copy_tensor_cuda.cu  copy_tensor_eigen.cc  copy_tensor_naive.cc  cos_cuda.cu  cos_eigen.cc  cos_naive.cc  divide_cuda.cu  divide_eigen.cc  divide_naive.cc  dump_description_cuda.cu  dump_description_eigen.cc  dump_description_naive.cc  eigen_utils.h  elu_cuda.cu  elu_eigen.cc  elu_naive.cc  exp_cuda.cu  exp_eigen.cc  exp_naive.cc  (+98 more)
primitiv/device_ops/cuda/: abs.cu  add.cu  argmax.cu  argmin.cu  batch_concat.cu  batch_pick.cu  batch_slice.cu  batch_sum.cu  broadcast.cu  common.h  concat.cu  conv2d.cu  copy_tensor.cu  cos.cu  divide.cu  dump_description.cu  elu.cu  exp.cu  identity.cu  inplace_add.cu  inplace_multiply_const.cu  inplace_subtract.cu  log.cu  logsumexp.cu  matmul.cu  max.cu  max_pool2d.cu  min.cu  multiply.cu  negate.cu  new_handle.cu  pick.cu  pow.cu  pown.cu  prelu.cu  random_bernoulli.cu  random_log_normal.cu  random_normal.cu  random_uniform.cu  reset_tensor.cu  (+13 more)
primitiv/device_ops/cuda16/: _add.cu  _argmax.cu  _argmin.cu  _batch_sum.cu  _broadcast.cu  _concat.cu  _conv2d.cu  _copy_tensor.cu  _divide.cu  _identity.cu  _inplace_multiply_const.cu  _inplace_subtract.cu  _logsumexp.cu  _matmul.cu  _max_pool2d.cu  _multiply.cu  _negate.cu  _new_handle.cu  _pick.cu  _pow.cu  _pown.cu  _random_bernoulli.cu  _random_log_normal.cu  _random_normal.cu  _random_uniform.cu  _sin.cu  _slice.cu  _softplus.cu  _subtract.cu  _sum.cu  _tan.cu  _transpose.cu  abs.cu  add.cu  argmax.cu  argmin.cu  batch_concat.cu  batch_pick.cu  batch_slice.cu  batch_sum.cu  (+45 more)
primitiv/device_ops/eigen/: abs.cc  add.cc  argmax.cc  argmin.cc  batch_concat.cc  batch_pick.cc  batch_slice.cc  batch_sum.cc  (+45 more)
primitiv/devices/: CMakeLists.txt
primitiv/internal/: cuda_utils.cu  cuda_utils.h
primitiv/msgpack/: README.md  objects.h  reader.h  writer.h
primitiv_c/: CMakeLists.txt  api.h  api_cuda.h  cuda_device.cc  cuda_device.h  define.h  device.cc  device.h  functions.cc  functions.h  graph.cc  graph.h  initializer.cc  initializer.h  initializer_impl.cc  initializer_impl.h  internal.h  model.cc  model.h  naive_device.cc  naive_device.h  operators.cc  operators.h  optimizer.cc  optimizer.h  optimizer_impl.cc  optimizer_impl.h  parameter.cc  parameter.h  shape.cc  shape.h  status.cc  status.h  tensor.cc  tensor.h  utils.cc  utils.h
test/: CMakeLists.txt  constant_initializer_test.cc  cpu_device_calc_test.cc  cpu_device_test.cc  cuda16_device_test.cc  cuda_compiler_test.cc  cuda_device_test.cc  cuda_memory_pool_test.cc  cuda_plugin_function_test.cc  cuda_precompiled_function_test.cc  default_scope_test.cc  device_test.cc  dynamic_library_test.cc  dynamic_library_test_config.h.in  eigen_device_test.cc  example_xor_test.cc  function_impl_test.cc  graph_test.cc  initializer_impl_test.cc  memory_pool_test.cc  mixins_test.cc  model_test.cc  msgpack_objects_test.cc  msgpack_reader_test.cc  msgpack_test.cc  msgpack_writer_test.cc  naive_device_test.cc  node_test.cc  numeric_utils_test.cc  opencl_device_test.cc  operator_impl_test.cc  optimizer_impl_test.cc  optimizer_test.cc  parameter_test.cc  random_test.cc  sgd_trainer_test.cc  shape_ops_test.cc  shape_test.cc  spinlock_test.cc  string_utils_test.cc  (+8 more)
test/c/: device_test.cc  graph_test.cc  internal_test.cc  node_test.cc  optimizer_test.cc  shape_test.cc  status_test.cc
test/dlls/: CMakeLists.txt  basic_test.cc  location.h.in  precompiled_operator.cu  test_plugin_function.cu
tuner/opencl/: CMakeLists.txt  common.h  concat_fw_tuner.cc  flip_fw_tuner.cc  parameter_tuner.h  pick_bw_tuner.cc  pick_fw_tuner.cc  set_identity_tuner.cc  slice_fw_tuner.cc
(+606 files in other folders)
